@@ -43,6 +43,7 @@ ChangeLog
 [+] * RunOnReceive now can get IDs of received messages.
 [-] * Avoid duplicating of same code in command line and tests for
       messages displaying.
+[!] * New binary gammu-smsd-inject to inject messages to SMSD.
     
 20081219 - 1.22.1
 
